Add youtube embeded lightbox to landing page

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -219,7 +219,7 @@ li.landing_login{
               <a href="/xroom"> <span class="link_spanner"></span></a>
             </div>
             <div class="landing_play_video">
-              <a href="#"><span class="link_spanner"><span></a>
+              <a href="javascript:playVideoLightbox();"><span class="link_spanner"><span></a>
             </div>
           </div>
         </div>
@@ -307,7 +307,7 @@ li.landing_login{
             </div>
             
             <div class="landing_play_video">
-              <a href="#"><span class="link_spanner"><span></a>
+              <a href="javascript:playVideoLightbox();"><span class="link_spanner"><span></a>
             </div>          
           </div>
           
