--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,10 @@
-<% provide(:title, 'Home') %>
 <% provide(:title, 'myWebRoom Virtual Room') %>
+
+<% content_for :head do %>
+    <!-- your tags -->
+    <meta name="description" content="A virtual place to Express, Organize, Discover, Share and Create.">
+<% end %>
+
 <link href='//fonts.googleapis.com/css?family=Open+Sans:800' rel='stylesheet' type='text/css'>
 <style>
 html,body{height:100%;}
