change get started link to xroom

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -190,7 +190,12 @@ li.landing_login{
 </style>
 <div id="toolbar_overlay">
   <div id="landing_logo">
-    <img src="http://res.cloudinary.com/hpdnx5ayv/image/upload/v1384904370/mywebroomlogo365x64.png">
+      
+      <% if signed_in? %>
+        <a href="<%=room_rooms_path(current_user.username)%>"><img src="http://res.cloudinary.com/hpdnx5ayv/image/upload/v1384904370/mywebroomlogo365x64.png"></a>
+      <%else%>
+         <a href="<%=root_path%>"><img src="http://res.cloudinary.com/hpdnx5ayv/image/upload/v1384904370/mywebroomlogo365x64.png"></a>
+      <%end%>
 
   </div>
 
@@ -221,7 +226,7 @@ li.landing_login{
             <p class="landing_text_3 uppercase">Style &nbsp;  &#183; &nbsp;  Personality &nbsp;  &#183; &nbsp;  Interests</p><br>
             <div class="blue_button landing_get_started">
               <span>GET STARTED</span>
-              <a href="/xroom"> <span class="link_spanner"></span></a>
+              <a href="<%=xroom_rooms_path%>"> <span class="link_spanner"></span></a>
             </div>
             <div class="landing_play_video">
               <a href="javascript:playVideoLightbox();"><span class="link_spanner"><span></a>
@@ -241,11 +246,11 @@ li.landing_login{
             <p class="landing_text_3 uppercase">Bookmarks &nbsp;  &#183; &nbsp;  Ideas &nbsp;  &#183; &nbsp;  Activities</p><br>
             <div class="blue_button landing_get_started">
               <span>GET STARTED</span>
-              <a href="/xroom"> <span class="link_spanner"></span></a>
+              <a href="<%=xroom_rooms_path%>"> <span class="link_spanner"></span></a>
             </div>
 
-            <div class="landing_play_video">
-              <a href="#"><span class="link_spanner"><span></a>
+             <div class="landing_play_video">
+              <a href="javascript:playVideoLightbox();"><span class="link_spanner"><span></a>
             </div>
           </div>
           
@@ -261,12 +266,12 @@ li.landing_login{
             <p class="landing_text_1"> Your place to</p>
             <p class="landing_text_2" >DISCOVER</p>
             <p class="landing_text_3 uppercase">Trends &nbsp;  &#183; &nbsp;  Sites &nbsp;  &#183; &nbsp;  Stores</p><br>
-            <div class="blue_button landing_get_started">
+           <div class="blue_button landing_get_started">
               <span>GET STARTED</span>
-              <a href="/xroom"> <span class="link_spanner"></span></a>
+              <a href="<%=xroom_rooms_path%>"> <span class="link_spanner"></span></a>
             </div>
             <div class="landing_play_video">
-              <a href="#"><span class="link_spanner"><span></a>
+              <a href="javascript:playVideoLightbox();"><span class="link_spanner"><span></a>
             </div>
 
 
@@ -284,12 +289,12 @@ li.landing_login{
             <p class="landing_text_1"> Your place to</p>
             <p class="landing_text_2" >SHARE</p>
             <p class="landing_text_3 uppercase">Products &nbsp;  &#183; &nbsp;  Contents &nbsp;  &#183; &nbsp;  Designs</p><br>
-            <div class="blue_button landing_get_started">
+           <div class="blue_button landing_get_started">
               <span>GET STARTED</span>
-              <a href="/xroom"> <span class="link_spanner"></span></a>
+              <a href="<%=xroom_rooms_path%>"> <span class="link_spanner"></span></a>
             </div>
-            <div class="landing_play_video">
-              <a href="#"><span class="link_spanner"><span></a>
+             <div class="landing_play_video">
+              <a href="javascript:playVideoLightbox();"><span class="link_spanner"><span></a>
             </div>
           </div>
           
@@ -308,12 +313,12 @@ li.landing_login{
             
             <div class="blue_button landing_get_started">
               <span>GET STARTED</span>
-              <a href="/xroom"> <span class="link_spanner"></span></a>
+              <a href="<%=xroom_rooms_path%>"> <span class="link_spanner"></span></a>
             </div>
             
             <div class="landing_play_video">
               <a href="javascript:playVideoLightbox();"><span class="link_spanner"><span></a>
-            </div>          
+            </div>       
           </div>
           
         </div>
