--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -94,7 +94,7 @@
               <% end %>
 
           <% else %>
-              <li><%= link_to_function "LOGIN", "javascript:login_lightbox_show()",:class => "grey_button_light grey_button", :id => "login_btn"%></li>
+              <li><%= link_to_function "LOGIN", "javascript:login_lightbox_show()",:class => "gray_button_light gray_button", :id => "login_btn"%></li>
               <li><%= link_to "SIGN UP", xroom_rooms_path , :id =>"signup_btn" %></li>
           <% end %>
           <!-- End If -->
