--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -367,7 +367,7 @@
 
 
 <!-- (6) JOIN THE TEAM -->
-<div id="join-the-team-section" class="container-fluid about-background-grey">
+<div id="join-the-team-section" class="container-fluid about-background-gray">
     <div class="row-fluid">
         <div class="about-margin">
             <div class="span6 about-large-round-picture">
@@ -493,7 +493,7 @@
 
 
 <!-- (9) PRESS -->
-<div class="container-fluid about-background-grey">
+<div class="container-fluid about-background-gray">
     <div class="row-fluid">
         <div class="about-margin">
             <div class="span6">
