--- a/app/assets/stylesheets/about.css.scss
+++ b/app/assets/stylesheets/about.css.scss
@@ -187,7 +187,7 @@ BACKGROUND COLOR
   background-color: #00ccff;
 }
 
-.about-background-grey {
+.about-background-gray {
   background-color: #f3f3f3;
 }
 /*
