Fix bugs: -Welcome Email typo -Add alert style to landing page. May not be needed, but its there. -Fix custom URL bookmark area to respond to smaller widths. Save Site buttons still show properly in view.

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -161,6 +161,14 @@ li.landing_login{
   background-image:url('http://res.cloudinary.com/hpdnx5ayv/image/upload/v1384976417/play-button.png');
 
 }
+.landing_page_view .alert.alert-notice
+{
+  position: absolute;
+top: 20px;
+left: 40%;
+z-index: 1;
+padding: 8px 35px;
+}
 /* keep full widget on smaller screens */
 @media (max-width: 767px) {
   body {
