--- a/app/views/users_mailer/signup_email.html.erb
+++ b/app/views/users_mailer/signup_email.html.erb
@@ -404,7 +404,7 @@ background-color: #00ccff; border: none; color: white; font-weight: normal; font
                                               <br />
                                               Enjoy your Room! <br /><br />
                                               Artem &amp; John <br />
-                                              Co-counders, myWebRoom.com
+                                              Co-founders, myWebRoom.com
                                             </center>
                                             </td>
                                           </tr></table></center>
