--- a/app/assets/stylesheets/password_resets.css.scss
+++ b/app/assets/stylesheets/password_resets.css.scss
@@ -44,3 +44,21 @@
   width: 400px;
 
 }
+
+
+.password_reset_content_mail_table table {
+
+  width: 100%;
+  border-collapse: separate;
+  border-spacing: 15px 15px;
+
+}
+
+.password_reset_content_mail_table td {
+
+  text-align: center;
+  border-top: 1px solid #e2e2e2;
+  padding: 19px;
+
+}
+
