--- a/app/assets/stylesheets/about.css.scss
+++ b/app/assets/stylesheets/about.css.scss
@@ -10,11 +10,11 @@
   top: 50px;
   left: 0;
   width: 100%;
-  height: 300px;
+  height: 650px;
 }
 .about-top-image {
   width: 100%;
-  height: 300px;
+  height: 650px;
   background-image: url(http://res.cloudinary.com/hpdnx5ayv/image/upload/v1385161332/team-image-01.jpg);
   background-position: 50% 50%;
   background-repeat: no-repeat;
@@ -207,12 +207,14 @@ BACKGROUND COLOR
 .about-background-gray {
   background-color: #f3f3f3;
 }
+
 /*
-LARGE ROUND PICTURES
+SECTION HEIGHT
 */
-.about-large-round-picture {
-  padding-bottom: 60px;
+.about-section {
+  height: 650px;
 }
+
 /*
 RECTANGLE PADDING
 */
@@ -230,5 +232,17 @@ TEXT ABOUT RECTANGLE PADDING
 MARGIN
 */
 .about-margin {
-  margin: 60px;
+  margin-top: 115px;
+}
+
+.about-margin-half {
+  margin-top: 50px;
+}
+
+.about-margin-left {
+  margin-left: 115px;
+}
+
+.about-margin-right {
+  margin-right: 115px;
 }
