makes footer background black

--- a/app/assets/stylesheets/about.css.scss
+++ b/app/assets/stylesheets/about.css.scss
@@ -208,6 +208,10 @@ BACKGROUND COLOR
   background-color: #f3f3f3;
 }
 
+.about-background-black {
+  background-color: #333333;
+}
+
 /*
 SECTION HEIGHT
 */
