fix some staff on landing page

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -132,7 +132,7 @@ li.landing_login{
 }
 .landing_header #login_btn,.landing_header #signup_btn{
   -webkit-box-shadow: 2px 2px 3px rgba(112,112,112,0.15);
-  -moz-box-shadow: 2px 2px 3px rgba(112,112,112,0..15);
+  -moz-box-shadow: 2px 2px 3px rgba(112,112,112,0.15);
   box-shadow: 2px 2px 3px rgba(112,112,112,0.15);
 }
 .landing_header #signup_btn{
@@ -229,7 +229,7 @@ li.landing_login{
               <a href="<%=xroom_rooms_path%>"> <span class="link_spanner"></span></a>
             </div>
             <div class="landing_play_video">
-              <a href="javascript:playVideoLightbox();"><span class="link_spanner"><span></a>
+              <a href="javascript:playVideoLightbox();"><span class="link_spanner"></span></a>
             </div>
           </div>
         </div>
@@ -250,7 +250,7 @@ li.landing_login{
             </div>
 
              <div class="landing_play_video">
-              <a href="javascript:playVideoLightbox();"><span class="link_spanner"><span></a>
+              <a href="javascript:playVideoLightbox();"><span class="link_spanner"></span></a>
             </div>
           </div>
 
@@ -271,7 +271,7 @@ li.landing_login{
               <a href="<%=xroom_rooms_path%>"> <span class="link_spanner"></span></a>
             </div>
             <div class="landing_play_video">
-              <a href="javascript:playVideoLightbox();"><span class="link_spanner"><span></a>
+              <a href="javascript:playVideoLightbox();"><span class="link_spanner"></span></a>
             </div>
 
 
@@ -294,7 +294,7 @@ li.landing_login{
               <a href="<%=xroom_rooms_path%>"> <span class="link_spanner"></span></a>
             </div>
              <div class="landing_play_video">
-              <a href="javascript:playVideoLightbox();"><span class="link_spanner"><span></a>
+              <a href="javascript:playVideoLightbox();"><span class="link_spanner"></span></a>
             </div>
           </div>
 
@@ -317,7 +317,7 @@ li.landing_login{
             </div>
 
             <div class="landing_play_video">
-              <a href="javascript:playVideoLightbox();"><span class="link_spanner"><span></a>
+              <a href="javascript:playVideoLightbox();"><span class="link_spanner"></span></a>
             </div>
           </div>
 
@@ -326,7 +326,7 @@ li.landing_login{
     </div>
   </div>
   <div class="pull-center">
-  <a class="carousel-control left" href="#myCarousel" data-slide="prev"><img src="http://res.cloudinary.com/hpdnx5ayv/image/upload/v1384913522/white-left-arrow.png"</a>
+  <a class="carousel-control left" href="#myCarousel" data-slide="prev"><img src="http://res.cloudinary.com/hpdnx5ayv/image/upload/v1384913522/white-left-arrow.png"></a>
   <a class="carousel-control right" href="#myCarousel" data-slide="next"><img src="http://res.cloudinary.com/hpdnx5ayv/image/upload/v1384913533/white-right-arrow.png"></a>
   </div>
 </div>
