Fixes Daria's quote & LinkedIn link

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -159,8 +159,8 @@
                         <div class="about-individual-picture">
                             <%= cl_image_tag("dasha.png", height: 250, width: 250, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%>
                         </div>
-                        <p class="about-quote about-quote-large">
-                            "If we are demoralized, sad and only complain, we'll not solve our problems."<br>Dalai Lama
+                        <p class="about-quote about-quote-x-large">
+                            "If we are demoralized, sad and only complain, we’ll not solve our problems. You have to have confidence and keep up your efforts - in other words, never give up."<br>Dalai Lama
                         </p>
                     </div>
                     <div class="caption text-center">
@@ -170,7 +170,7 @@
                             <a href="http://www.linkedin.com/in/drebenok"><%= cl_image_tag("linkedin-about-icon.png", height: 28, width: 28, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%></a>
                         </span>
                         <span>
-                            <a href="/room/daria"><%= cl_image_tag("mywebroom-about-icon.png", height: 28, width: 28, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%></a>
+                            <a href="/room/drebenok"><%= cl_image_tag("mywebroom-about-icon.png", height: 28, width: 28, :crop => :fit, :quality => 80, :default_image => "default_image_all.png")%></a>
                         </span>
                     </div>
                 </div>
